--- a/demo/index.html
+++ b/demo/index.html
@@ -11,11 +11,11 @@
       height: 800px;
       flex: 1;
       margin: 12px;
-      background: #fff;
+      /* background: #fff; */
     }
 
     body.styled {
-      --anypoiont-dropdown-shaddow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
+      --anypoint-dropdown-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
       --primary-color: #00A2DF;
       --arc-font-body1-font-size: 14px;
       --arc-font-body1-font-weight: 400;
@@ -33,14 +33,90 @@
       --error-color: red;
     }
 
-    pre {
-      white-space: pre-wrap;
-      display: block;
-      word-break: break-all;
+    body.demo.styled.dark header {
+      background-color: #424242;
+    }
+
+    body.styled.demo.dark {
+      --primary-color: #ffcc80;
+      --accent-color: #E040FB;
+      --primary-text-color: #fff;
+      --secondary-text-color: rgba(255, 255, 255, 0.84);
+      --primary-background-color: #212121;
+      --secondary-background-color: #313131;
+      --error-color: #ff9090;
+      --link-color: #8bc34a;
+      --input-background-color: var(--primary-background-color);
+      --active-background-color: #616161;
+
+      --anypoint-dropdown-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
+      --anypoint-autocomplete-dropdown-shadow: var(--anypoint-dropdown-shadow);
+    
+
+      background-color: var(--secondary-background-color);
+      color: #fff;
+
+      --anypoint-dropdown-menu-background-color: #494949;
+      --anypoint-dropdown-menu-label-background-color: var(--primary-background-color);
+      --anypoint-listbox-background-color: #494949;
+      --anypoint-dropdown-menu-focus-background-color: #616161;
+      --anypoint-dropdown-menu-label-color: #fff;
+      --anypoint-dropdown-menu-info-message-color: #fff;
+      --anypoint-item-hover-background-color: #616161;
+      --anypoint-item-focused-background-color: #212121;
+      --anypoint-autocomplete-background-color: #494949;
+      --anypoint-icon-button-emphasis-low-color: #fff;
+
+      --anypoint-checkbox-label-color:  #F5F5F5;
+      --anypoint-input-background-color: var(--input-background-color);
+      --anypoint-input-label-color: var(--primary-text-color);
+      --anypoint-input-input-color: var(--primary-text-color);
+      --anypoint-input-border-bottom-color: var(--primary-text-color);
+      --anypoint-input-focused-border-bottom-color: var(--primary-text-color);
+      --anypoint-input-label-background-color: rgb(66, 66, 66);
+      --anypoint-input-legacy-focus-background-color: #3a3b3c;
+      --anypoint-input-legacy-focus-border-color: #178bea;
+      --anypoint-input-info-message-color: var(--primary-text-color);
+
+      --anypoint-button-emphasis-low-hover-background-color: #616161;
+      --anypoint-button-emphasis-low-focus-background-color: var(--anypoint-button-emphasis-low-hover-background-color);
+      --anypoint-button-emphasis-low-focus-color: var(--primary-color);
+
+      --anypoint-menu-button-border-radius: 12px;
+
+      --code-mirror-background-color: #37474F;
+      --code-mirror-string-color: #C3E88D;
+      --code-mirror-punctuation-color: #EEFFFF;
+      --code-mirror-atom-color: #F07178;
+      --code-mirror-number-color: #F78C6A;
+      --code-mirror-cursor-color: #009688;
+      --code-mirror-tag-color: #ffffff;
+      --code-mirror-tag-color: #b4b4b4;
+
+      --code-operator-value-background-color: transparent;
+      --code-background-color: #212121;
+      --code-color: #fff;
+      --code-type-number-value-color: #eb67b0;
+      --code-property-value-color: #b0e6ff;
+      --code-type-text-value-color: #ffb89b;
+      --code-type-boolean-value-color: #72baff;
+      --code-type-number-value-color: #b5cea8;
+      --code-token-comment-value-color: #91afcd;
+      --code-keyword-value-color: #63d0ff;
+
+      --anypoint-listbox-padding: 8px 0;
+      --anypoint-item-padding: 0 16px;
+
+      --bottom-sheet-background-color: var(--primary-background-color);
+      --bottom-sheet-color: var(--primary-text-color);
+
+      /* cookie manager */
+      --cookie-details-meta-color: var(--primary-text-color);
+      --cookie-manager-search-input-background-color: var(--primary-background-color);
     }
   </style>
 </head>
-<body>
+<body class="demo">
   <div id="demo"></div>
   <script type="module" src="index.js"></script>
   </script>
